update syncpoller and partyinforesource