@@ -1,21 +1,19 @@
 package com.quorum.tessera.p2p;
 
 import com.quorum.tessera.discovery.Discovery;
+import com.quorum.tessera.encryption.PublicKey;
 import com.quorum.tessera.partyinfo.P2pClient;
 import com.quorum.tessera.partyinfo.TransactionRequester;
 import com.quorum.tessera.partyinfo.model.Party;
 import com.quorum.tessera.partyinfo.node.NodeInfo;
+import com.quorum.tessera.partyinfo.node.Recipient;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.ExecutorService;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptySet;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -39,27 +37,27 @@ public class SyncPollerTest {
 
     @Before
     public void init() {
+
         this.executorService = mock(ExecutorService.class);
         this.resendPartyStore = mock(ResendPartyStore.class);
         this.transactionRequester = mock(TransactionRequester.class);
         this.partyInfoService = mock(Discovery.class);
         this.partyInfoParser = mock(PartyInfoParser.class);
         this.p2pClient = mock(P2pClient.class);
+
         doReturn(true).when(p2pClient).sendPartyInfo(anyString(), any());
 
-        NodeInfo nodeInfo = NodeInfo.Builder.create()
-            .withUrl("myurl")
-            .build();
+        NodeInfo nodeInfo = NodeInfo.Builder.create().withUrl("myurl").build();
         when(partyInfoService.getCurrent()).thenReturn(nodeInfo);
 
         this.syncPoller =
-                new SyncPoller(
-                        executorService,
-                        resendPartyStore,
-                        transactionRequester,
-                        partyInfoService,
-                        partyInfoParser,
-                        p2pClient);
+            new SyncPoller(
+                executorService,
+                resendPartyStore,
+                transactionRequester,
+                partyInfoService,
+                partyInfoParser,
+                p2pClient);
     }
 
     @After
@@ -111,17 +109,16 @@ public class SyncPollerTest {
 
         final String targetUrl = "localurl.com";
         final String syncableUrl = "syncable.com";
-        final Party localParty = new Party(targetUrl);
+        final com.quorum.tessera.partyinfo.node.Recipient localKey =
+            com.quorum.tessera.partyinfo.node.Recipient.of(mock(PublicKey.class), targetUrl);
+        final com.quorum.tessera.partyinfo.node.Recipient anotherKey =
+            com.quorum.tessera.partyinfo.node.Recipient.of(mock(PublicKey.class), syncableUrl);
         final Party syncableParty = new Party(syncableUrl);
-        final Set<Party> parties = new HashSet<>(Arrays.asList(localParty, syncableParty));
+        final Set<Recipient> recipients = Set.of(localKey, anotherKey);
 
-        NodeInfo nodeInfo = NodeInfo.Builder.create()
-            .withUrl("localurl.com")
-            .withParties(parties.stream()
-                .map(Party::getUrl)
-                .map(com.quorum.tessera.partyinfo.node.Party::new).collect(Collectors.toList()))
-            .build();
+        NodeInfo nodeInfo = NodeInfo.Builder.create().withUrl("localurl.com").withRecipients(recipients).build();
 
+        //        partyStore.store(URI.create(syncableUrl));
         when(partyInfoService.getCurrent()).thenReturn(nodeInfo);
 
         doReturn(Optional.empty()).when(resendPartyStore).getNextParty();
@@ -211,5 +208,4 @@ public class SyncPollerTest {
     public void constructWithMinimalArgs() {
         assertThat(new SyncPoller(resendPartyStore, transactionRequester, p2pClient)).isNotNull();
     }
-
 }
